# slide-forge

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: consultation_plan.md  product_hunt_launch.md  setup.md
e2e/: test_cloud_flow.py  test_full_flow.py  test_image_flow.py  test_integration.py  test_offline_flow.py  test_os_portability.py  test_privacy_audit.py  test_prompt_variety.py  test_slide_kinds_coverage.py  test_strict_quality.py  test_theme_colors.py
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ollama.rs  secrets.rs
src/components/: BackButton.tsx  Header.tsx  Main.tsx  Result.tsx  UpdateBanner.tsx  Wizard.tsx
src/lib/: images.ts  llmPrompt.ts  openUrl.ts  secrets.ts  storage.ts  updater.ts  useElapsedSec.ts  version.ts
src/md/: parser.ts
src/pptx/: generator.ts  themes.ts
src/pptx/packs/: minimal.ts
src/providers/: anthropic.ts  autoIllustrate.ts  gemini.ts  groq.ts  imageGen.ts  index.ts  ollama.ts  openai.ts
src/samples/: defaultPrompt.ts
src/store/: useAppStore.ts
