[package]
name = "slide-forge"
version = "0.1.0"
description = "プロンプトから PowerPoint を生成するデスクトップアプリ"
authors = ["Slide Forge Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "slide_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
