[package]
name = "slide-forge"
version = "0.1.0"
description = "プロンプトから PowerPoint を生成するデスクトップアプリ"
authors = ["Slide Forge Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "slide_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS-native credential storage: macOS Keychain, Windows Credential
# Manager (DPAPI), Linux Secret Service / KWallet. We use the
# platform feature flags to pull the right backend per target;
# `apple-native` and `windows-native` avoid the secret-service
# dependency on those OSes.
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "linux-native",
    "sync-secret-service",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
