[package]
name = "slide-forge"
version = "0.2.1"
description = "プロンプトから PowerPoint を生成するデスクトップアプリ"
authors = ["Slide Forge Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "slide_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS-native credential storage: macOS Keychain, Windows Credential
# Manager (DPAPI), Linux Secret Service / KWallet. We use the
# platform feature flags to pull the right backend per target;
# `apple-native` and `windows-native` avoid the secret-service
# dependency on those OSes.
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "linux-native",
    "sync-secret-service",
] }
# HTTP client used by the Ollama bridge. We route every Ollama call
# through Rust because the Tauri 2 webview runs at origin
# `http://tauri.localhost` (Windows) / `tauri://localhost` (mac/Linux),
# which Ollama's default CORS allowlist rejects. Doing the request in
# Rust skips the CORS preflight entirely.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["sync", "macros"] }
futures-util = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
